# AndroidFFmpeg

./: README.md  settings.gradle
FFcmd/: build.gradle
FFcmd/src/androidTest/java/com/haibox/ffcmd/: ExampleInstrumentedTest.kt
FFcmd/src/main/cpp/: CMakeLists.txt  ff_cmd_jni.c
FFcmd/src/main/cpp/inc/arm64-v8a/: config.h
FFcmd/src/main/cpp/inc/armeabi-v7a/: config.h
FFcmd/src/main/cpp/src/: cmdutils.c  ffmpeg.c
FFcmd/src/main/java/com/haibox/ffcmd/: FFmpeg.java  IFFmpeg.java
FFcmd/src/main/java/com/haibox/ffcmd/resp/: ExecuteResponse.java  IFFmpegExecuteResponse.java
FFcmd/src/main/java/com/haibox/ffcmd/task/: ExecuteAsyncTask.java
FFcmd/src/test/java/com/haibox/ffcmd/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/haibox/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/haibox/ffmpeg/: MainActivity.kt
app/src/main/java/com/haibox/ffmpeg/tool/: FFmpegHelper.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/haibox/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
script/: build_ffmpeg.sh  build_openh264.sh
